# pycrm

./: .gitignore  LICENSE  README.md  pyproject.toml  tox.ini
.github/actions/setup/: action.yaml  install.yaml
.github/workflows/: ci.yaml  code-quality.yaml
crm/: main.py
crm/agents/tabular/: cql.py  ql.py
crm/automaton/: __init__.py  compiler.py  machine.py
crm/crossproduct/: crossproduct.py
crm/label/: function.py
crm/sb3/vec/: __init__.py
docs/: api-reference.mdx  concepts.mdx  docs.json  examples.mdx  getting-started.mdx  installation.mdx  introduction.mdx  mint.json  quickstart.mdx
docs/core-concepts/: agents.mdx  automata.mdx  cross-products.mdx  labelling-functions.mdx
docs/worked-examples/letter-env/: counterfactual-q-learning.mdx  crm.mdx  cross-product.mdx  ground-environment.mdx  labelling-function.mdx  q-learning.mdx
examples/continuous/: cddpg.py  csac.py  ctd3.py  ddpg.py  sac.py  td3.py
examples/continuous/core/: __init__.py  crossproduct.py  label.py  machine.py
examples/crm/continuous/: cddpg.py  csac.py  ctd3.py  ddpg.py  main.py  sac.py  td3.py
examples/crm/discrete/: cdqn.py  main.py
examples/discrete/: c_dqn.py  cdqn.py  dqn.py
examples/discrete/core/: __init__.py  crossproduct.py  ground.py  label.py  machine.py
examples/introduction/: cq_learning.py  environment_example.py  q_learning.py
examples/introduction/core/: __init__.py  crossproduct.py  label.py  machine.py
examples/letter/: crossproduct.py  ground.py  machine.py  main.py
examples/reward_machine/: example.py
examples/reward_machine/core/: label.py  machine.py
examples/rm/continuous/: cddpg.py  csac.py  ctd3.py  ddpg.py  main.py  sac.py  td3.py
examples/rm/discrete/: cdqn.py  dqn.py  main.py
examples/rm/discrete-office/: main.py
examples/rm/tabular/: main.py
examples/tabular/core/: __init__.py  crossproduct.py  machine.py
experiments/letter/: crossproduct.py  machine.py
experiments/letter/exp/: all_returns_cql.npy  all_returns_ql.npy  main.py
experiments/letter/lib/: __init__.py  crossproduct.py  ground.py  machine.py
experiments/warehouse/: __init__.py  environment.py  main.py  robot.py  task.py  wrapper.py
experiments/warehouse/config/: scene.py
experiments/warehouse/constants/: environment.py  regions.py  simulation.py  waypoints.py
experiments/warehouse/core/: demo.py
experiments/warehouse/lib/: __init__.py
experiments/warehouse/scenes/: __init__.py  basic.py  fancy.py  interface.py
pycrm/automaton/: compiler.py  machine.py
pycrm/crossproduct/: crossproduct.py
scripts/cf/: start_ee.sh
scripts/cs/: start_ee.sh
scripts/cs_exp/: start_ee.sh
scripts/examples/continuous/: cddpg.slurm  csac.slurm  sac.slurm  (+4 more)
scripts/exp/: start.sh
scripts/reg/: start_ee.sh
scripts/train/: start.sh
scripts/utils/: download.sh  download_crm_logs.sh  download_rm_logs.sh  export.sh
tests/: conftest.py  test_thing.py
tests/agents/: test_tabular.py
tests/crossproduct/: conftest.py  test_counterfactual.py  test_environment.py
tests/label/: conftest.py
(+315 files in other folders)
