[project]
description = "The official Python library for Counting Reward Machines."
name = "crm"
readme = "README.md"
requires-python = ">=3.10"
version = "0.0.1"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.hatch.build.targets.wheel]
packages = ["crm"]

[tool.uv]
dev-dependencies = [
 "pyright>=1.1.389",
 "pytest-cov>=6.0.0",
 "pytest>=8.3.3",
 "ruff>=0.8.1",
]

[tool.pyright]
exclude = [".venv"]
pythonVersion = "3.10"
venvPath = "."
venv = ".venv"